# object_detection_radxa

./: .gitignore  run_cam  run_cam.cpp  run_model.py  run_model_c  run_model_c.cpp
rknn_model_zoo/examples/yolov5/cpp/: CMakeLists.txt  postprocess.cc  real_time_objdetection.cpp
rknn_model_zoo/examples/yolov5/python/: yolov5.py
rknn_model_zoo/py_utils/: rknn_executor.py
rknn_model_zoo/utils/: image_utils.c  image_utils.h
